# fortran-approx

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  approx.f90
cmake/: approxConfig.cmake.in
docs/: ChangeLog
example/: Makefile  main.f90
src/: approx.F90  approx.f90
